# OCaml-CSV-Data-Analyzer

./: csv_reader.ml  dune  dune-project  sales_data.csv
_build/: .db  .digest-db  log
_build/default/: ocaml_data_decision_app.dune-package  ocaml_data_decision_app.install
_build/default/.csv_reader.eobjs/byte/: dune__exe__Csv_reader.cmi  dune__exe__Csv_reader.cmti
_build/default/.csv_reader.eobjs/native/: dune__exe__Csv_reader.cmx
_build/default/.dune/: configurator  configurator.v2
_build/default/.merlin-conf/: exe-csv_reader
_build/default/lib/: ocaml_data_decision_app.cma  ocaml_data_decision_app.cmxa  ocaml_data_decision_app.cmxs
_build/default/lib/.merlin-conf/: lib-ocaml_data_decision_app
_build/default/lib/.ocaml_data_decision_app.objs/byte/: ocaml_data_decision_app.cmi  ocaml_data_decision_app.cmo  ocaml_data_decision_app.cmt
_build/default/lib/.ocaml_data_decision_app.objs/native/: ocaml_data_decision_app.cmx
_build/default/test/.merlin-conf/: exe-test_ocaml_data_decision_app
_build/default/test/.test_ocaml_data_decision_app.eobjs/byte/: dune__exe__Test_ocaml_data_decision_app.cmi  dune__exe__Test_ocaml_data_decision_app.cmti
_build/default/test/.test_ocaml_data_decision_app.eobjs/native/: dune__exe__Test_ocaml_data_decision_app.cmx
lib/: dune
test/: dune
